[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dslabs"
version = "0.3.0"
description = "Teaching scaffold for distributed systems labs"
readme = "README.md"
requires-python = ">=3.8.5"
authors = [{name = "Carl Scheffler", email = "scheffler@minerva.edu"}]
dependencies = []

[tool.setuptools]
packages = { find = { where = ["."], include = ["dslabs*"] } }
